# liked-videos

./: .gitignore  README.md  pyproject.toml
src/liked_videos/: __init__.py  __main__.py  log.py  logging.py  notes.py  utils.py  youtube.py
src/liked_videos/youtube/: client.py  videos.py
